# vpt_denoise

./: .gitignore  .gitmodules  LICENSE  README.md  run.py
pydens2d/: CMakeLists.txt  LICENSE  README.md  setup.py
pydens2d/src/: PyDens2D.cpp  PyDens2D.hpp  pydens2d.pyi
pylimbo/: README.md  setup.py
pylimbo/src/: PyLimbo.cpp  PyLimbo.hpp  pylimbo.pyi
src/: compute_vdb_bounds.py  main.py  main2d.py  main2d_cpy.py  main2d_video.py  main_energy.py  main_old.py  render_blender.py  vpt.py
src/util/: module_loader.py  sample_view.py  save_tensor.py
